<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/captureTab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/margin_outer">

    <ProgressBar
        android:id="@+id/captureTabProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="@dimen/margin_inner"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/captureLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/captureTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/captureButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/component_size"
                android:layout_weight="1"
                android:text="@string/capture_button_description_stopped" />

            <ImageView
                android:id="@+id/captureStatusImageView"
                android:layout_width="@dimen/element_size"
                android:layout_height="@dimen/element_size"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_parrot_red" />

            <Button
                android:id="@+id/exportButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/component_size"
                android:layout_weight="1"
                android:text="@string/export_button_description" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/captureMiddleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_size"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/captureDisplayedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_inner"
                    android:text="@string/capture_displayed_title" />

                <TextView
                    android:id="@+id/captureDisplayedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_inner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_size"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/captureTotalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_inner"
                    android:text="@string/capture_total_title" />

                <TextView
                    android:id="@+id/captureTotalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_inner" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/captureScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windowBackgroundAlt">

            <LinearLayout
                android:id="@+id/captureView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

    </LinearLayout>

</FrameLayout>